[gd_scene load_steps=19 format=2]

[ext_resource path="res://font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=2]
[ext_resource path="res://GFX/Tools/battery.png" type="Texture" id=3]
[ext_resource path="res://Scripts/GUI.gd" type="Script" id=4]
[ext_resource path="res://GFX/Tools/pick.png" type="Texture" id=5]
[ext_resource path="res://GFX/Tools/key.png" type="Texture" id=6]
[ext_resource path="res://GFX/Tools/lighter.png" type="Texture" id=7]
[ext_resource path="res://GFX/Tools/shovel.png" type="Texture" id=8]
[ext_resource path="res://GFX/Tools/axe.png" type="Texture" id=9]
[ext_resource path="res://GFX/Tools/lantern.png" type="Texture" id=10]
[ext_resource path="res://Scripts/ColdMeter.gd" type="Script" id=11]
[ext_resource path="res://GFX/textures/freazingSilhuete1.png" type="Texture" id=12]
[ext_resource path="res://GFX/textures/freazingSilhuete2.png" type="Texture" id=13]
[ext_resource path="res://Scripts/ColdSingleton.gd" type="Script" id=14]
[ext_resource path="res://GFX/textures/UI/exclamationMark/exclamationMark2.png" type="Texture" id=15]
[ext_resource path="res://GFX/textures/UI/exclamationMark/exclamationMark1.png" type="Texture" id=16]
[ext_resource path="res://Scenes/DetectionControl.gd" type="Script" id=17]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[node name="GUI" type="CanvasLayer" groups=[
"GUI",
]]
pause_mode = 2
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0431373, 0.0431373, 0.117647, 0.752941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Node" parent="."]
script = ExtResource( 2 )

[node name="PauseMenu" type="Node" parent="Pause"]

[node name="PauseOverlay" type="ColorRect" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.0
margin_top = -52.51
margin_right = 111.0
margin_bottom = 47.49
color = Color( 0, 0, 0, 0.329412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseText" type="RichTextLabel" parent="Pause/PauseOverlay"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -77.3635
margin_right = 102.637
margin_bottom = 100.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "Пауза"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -481.449
margin_top = -66.5199
margin_right = -9.44946
margin_bottom = -2.5199
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BatteryIcon" type="TextureRect" parent="IconContainer"]
visible = false
margin_left = 407.0
margin_right = 471.0
margin_bottom = 64.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AxeIcon" type="TextureRect" parent="IconContainer"]
visible = false
margin_left = 407.0
margin_right = 471.0
margin_bottom = 64.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlashlightIcon" type="TextureRect" parent="IconContainer"]
visible = false
margin_left = 407.0
margin_right = 471.0
margin_bottom = 64.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyIcon" type="TextureRect" parent="IconContainer"]
visible = false
margin_left = 408.0
margin_right = 472.0
margin_bottom = 64.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LighterIcon" type="TextureRect" parent="IconContainer"]
visible = false
margin_left = 408.0
margin_right = 472.0
margin_bottom = 64.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickaxeIcon" type="TextureRect" parent="IconContainer"]
visible = false
margin_left = 340.0
margin_right = 404.0
margin_bottom = 64.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShovelIcon" type="TextureRect" parent="IconContainer"]
visible = false
margin_left = 408.0
margin_right = 472.0
margin_bottom = 64.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColdControl" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 56.6325
margin_top = -114.566
margin_right = 96.6325
margin_bottom = -74.5662
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColdMeter" type="TextureProgress" parent="ColdControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -72.0
margin_right = 48.0
margin_bottom = 72.0
step = 0.025
texture_under = ExtResource( 12 )
texture_progress = ExtResource( 13 )
fill_mode = 3
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetectionControl" type="Control" parent="." groups=[
"Detection",
]]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="DetectionControl"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 124.633
margin_top = 473.0
margin_right = 188.633
margin_bottom = 537.0
texture_under = ExtResource( 16 )
texture_progress = ExtResource( 15 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}
